--- a/client/src/pages/admin/admin.css
+++ b/client/src/pages/admin/admin.css
@@ -5,10 +5,14 @@
     margin-top: 50px;
 }
 
+.adminpanel h1{
+    font-weight: 800;
+}
+
 .adminprofile{
     width: 90%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     margin-top: 50px;
     gap: 30px;
     text-align: center;
@@ -16,8 +20,9 @@
 
 .adminoptions{
     box-shadow: 2px 2px 0px 1px rgb(0, 0, 0);
-    background: rgb(239, 96, 44);
-    color: rgb(255, 255, 255);
+    background: rgb(255, 252, 252);
+    font-weight: 600;
+    color: rgb(1, 37, 121);
     border: none;
     padding: 10px;
     border-radius: 5px;
@@ -26,4 +31,6 @@
 
 .adminoptions:hover{
     transform: scale(1.05);
+    background: #00143d;
+    color: aliceblue;
 }
