--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -27,20 +27,18 @@
 }
 
 .addprobut{
-    background: rgb(172, 189, 220);
+    background: rgb(1, 37, 121);
     box-shadow: 2px 2px 1px 1px rgb(15, 4, 0);
     padding: 5px;
     border: none;
     outline: none;
     width: 20%;
-    color: rgb(0, 0, 0);
-    font-weight: 600;
+    color: rgb(255, 255, 255);
     border-radius: 5px;
 }
 
 .addprobut:active{
-    background:rgb(239, 96, 44);
-    box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);
+    transform: scale(1.05);
 }
 
 .projectinputeach{
