--- a/client/src/pages/admin/admin.css
+++ b/client/src/pages/admin/admin.css
@@ -22,7 +22,7 @@
     box-shadow: 2px 2px 0px 1px rgb(0, 0, 0);
     background: rgb(255, 252, 252);
     font-weight: 600;
-    color: rgb(1, 37, 121);
+    color: #00143d;
     border: none;
     padding: 10px;
     border-radius: 5px;
