--- a/client/src/components/addguide/addguide.css
+++ b/client/src/components/addguide/addguide.css
@@ -36,7 +36,7 @@
 }
 
 .guidebut{
-    background: rgb(1, 37, 121);
+    background: #00143d;
     box-shadow: 2px 2px 1px 1px rgb(15, 4, 0);
     padding: 5px;
     border: none;
