--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -27,7 +27,7 @@
 }
 
 .addprobut{
-    background: rgb(1, 37, 121);
+    background: #00143d;
     box-shadow: 2px 2px 1px 1px rgb(15, 4, 0);
     padding: 5px;
     border: none;
