--- a/client/src/pages/similarity/similarity.css
+++ b/client/src/pages/similarity/similarity.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    gap: 10px;
 }
 
 .drop_box{
@@ -30,3 +31,35 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
 }
+
+.pro_box{
+    width: 80%;
+    box-shadow: 2px 2px 2px 2px #00143d;
+    background: rgb(255, 252, 252);
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.pro_box h2{
+    color: rgb(13, 175, 94);
+    font-weight: 800;
+}
+
+.simpro{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid slategray;
+    border-radius: 5px;
+    padding: 5px;
+    gap: 5px;
+    font-weight: 800;
+}
+
+.simpr_title{
+    color: #00143d;
+}
+
+
