--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -1,9 +1,11 @@
 .headercontainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    background: url('./bg4.png');
+    color: white;
+    margin-top: 0px;
+    padding: 20px;
 }
 
 .headercontainer h1{
