--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -9,17 +9,19 @@
     height:50%;
     display: flex;
     flex-direction: column;
-    padding: 10px; 
+    padding: 10px;
+    background: url('./bg4.png'); 
 }
 
 .homeintro h1{
     text-align: center;
-    color: #000000;
+    color: white;
     padding-top: 20px;
+    font-weight: 800;
 }
 
 .homeintro p{
-    color: #000000;
+    color: white;;
     font-size: 20px;
     padding: 10px;
     text-align: center;
