--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -4,8 +4,8 @@
     height:20%; */
     display: flex;
     flex-direction: column; 
-    /* background-color: #00143d; */
     position: relative;
+    overflow: hidden;
     z-index: 1;
     padding:0;
     margin:0;
@@ -13,6 +13,7 @@
     left:0;
     width: 100%;
     height: 300px;
+    
 }
 
 .banner img {
@@ -28,77 +29,105 @@
 }
 
 .grid{
-    margin: auto;
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    margin-top: 15%;
 
+    margin-top: 100px;
+    position: relative;
+    height: 600px;
+    width: 832px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+    box-shadow: 0px 8px 10px -6px rgba(255, 255, 255, 0.5);
+
+    /* display: flex; */
+    margin:0 auto;
+    max-width: 90%;
+     /* Center align horizontally */
+     /* align-items: center;
+     justify-content: center; */
+
+     /* Center align vertically */
+    /* align-items: center; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 5px;
     grid-auto-rows: minmax(100px, auto);
 
+    height: 10%; /*Sets the height of the grid div to 50% of the banner div */
+    transform: translateY(-30%);
+
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 2;
-    height: 100%;
-    
+    /* height: 100%;    */
 }
 
 .profiledetails{
     background-color: #ffffff;
     box-shadow:0px 1px 1px 1px lightslategray ;
     border-radius: 2px;
-    margin-left: 15%;
-    width: 30%;
+    /* margin-left: 30%; */
+    width: 100%;
     display: flex;
-    padding: 10px;
-    gap: 5px;
-    grid-column: 1/3;
+    padding: 0px;
+
+    grid-column: 1/4;
     grid-row: 1;
     justify-content: center;
     align-items: center;
     font-weight: 300;
     font-family: 'Raleway', sans-serif;
-
 }
 
 .profiledivison1{
-    /* border: 2px dotted; */
-    margin-top: 5px;
     display: flex;
     flex-direction: column;
+    position: relative;
     align-items: center;
     gap:20px;
-    margin-left: auto;
-    justify-content: center;
+    /* margin-left: auto; */
+    /* justify-content: center; */
     text-align: center;
-    margin-right: auto;
+    /* margin-right: auto; */
     height: 100%;
-    width: 100%;
+    width: 50%;
+    margin: auto;
+    
 }
 
 .profilepic{
     border: 2px solid;
-    max-width: 220px;
-    height: 220px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 50%;
-    margin-top: 20px;
-    margin-left:auto;
+    margin-top: 0%;
+    /* margin-left:20px; */
     margin-right: auto;
-    border-color: aliceblue;
+    border-color:whitesmoke;
+    text-align: center;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-40%, -60%);
 }
 
 .profilepic img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 50%; 
+    
+  }
+
+  .guideskillitems{
+    margin-top: 35%;
+    left: 32%;
+    position: absolute;
+    margin-bottom: 20%;
   }
 
 .profiledivison2{
@@ -106,17 +135,19 @@
     background-color: #ffffff;
     box-shadow:0px 1px 1px 1px lightslategray ;
     border-radius: 2px;
-    width: 30%;
+    height:100%;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     max-height: fit-content;
-    margin-top: 0px;
-    margin-left: 15%;
+    /* margin-top: 90%; */
+    margin-left: 40px;
     padding: 10px;
     gap: 5px;
-    grid-column: 1/3;
-    grid-row: 2;
-    margin-bottom: 20px;
+    /* grid-column: 1/3;
+    grid-row: 2; */
+    grid-column: 2 / 4;
+    grid-row: 1 / 3;
 
 }
 
@@ -158,16 +189,23 @@
     color: #fff;
 }
 
-.adminprofiletable{
-    height:100% ;
+.table {
+    overflow-x: auto;
     width: 100%;
-    text-align: center;
+  }
+
+.adminprofiletable{
     table-layout: fixed;
+    height:100% ;
+    width: 80%;
+    text-align: center;
+    /* table-layout: fixed; */
     box-shadow: 0px 1px 1px 1px lightslategray;
     margin-left: 40px;
     border-collapse: collapse;
     border: none;
     margin-right: 10px;
+    white-space: nowrap;
 }
 
 .adminprofiletable th {
@@ -206,24 +244,25 @@
 
 .projectlist{
     overflow: auto;
-    margin-top: 0px;
-    margin-left: 10px;
-    height: 100%;
-    width: 90%;
+    margin-top: 20%;
+    /* margin-left: 20%; */
     display:flex;
     flex-direction: column;
-    grid-column: 2/4;
-    grid-row: 1;
-    margin-right: 60px;
+    grid-column: 1/4;
+    grid-row: 2;
+    height: 100%; /* Adjust the height as needed */
+    width: 100%; /* Adjust the width as needed */
+    /* margin-right: 50px; */
 
     background-color: #ffffff;
     box-shadow:0px 1px 1px 1px lightslategray ;
     border-radius: 3px;
+
 }
 
 .listheading{
     margin-top: 20px;
-    margin-left: 40px;
+    margin-left: 20px;
    font-weight: 200;
    font-family: 'Exo 2';
 }
