--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -1,163 +1,73 @@
 .banner{
-    /* background-color: #00143d; */
-    /* width: 100%;
-    height:20%; */
     display: flex;
     flex-direction: column; 
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    padding:0;
-    margin:0;
-    top:0;
-    left:0;
     width: 100%;
-    height: 300px;
-    
+    height: 250px;
 }
 
 .banner img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-  }
-
-
+    object-fit:fill;
+}
 .profile{
-    margin-top: auto;
-  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.grid{
-
-    margin-top: 100px;
-    position: relative;
-    height: 600px;
-    width: 832px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 40px;
-    box-shadow: 0px 8px 10px -6px rgba(255, 255, 255, 0.5);
-
-    /* display: flex; */
-    margin:0 auto;
-    max-width: 90%;
-     /* Center align horizontally */
-     /* align-items: center;
-     justify-content: center; */
-
-     /* Center align vertically */
-    /* align-items: center; */
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-    grid-auto-rows: minmax(100px, auto);
-
-    height: 10%; /*Sets the height of the grid div to 50% of the banner div */
-    transform: translateY(-30%);
-
+.profileall{
+    border-radius: 5px; 
     position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
-    /* height: 100%;    */
+    top: 100px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.profileall h1{
+    font-weight: 800;
+    color: #fff;
 }
 
 .profiledetails{
-    background-color: #ffffff;
-    box-shadow:0px 1px 1px 1px lightslategray ;
-    border-radius: 2px;
-    /* margin-left: 30%; */
-    width: 100%;
+    border-radius: 5px;
     display: flex;
-    padding: 0px;
-
-    grid-column: 1/4;
-    grid-row: 1;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    font-weight: 300;
-    font-family: 'Raleway', sans-serif;
+    background: #00143d;
 }
 
 .profiledivison1{
     display: flex;
     flex-direction: column;
-    position: relative;
     align-items: center;
-    gap:20px;
-    /* margin-left: auto; */
-    /* justify-content: center; */
-    text-align: center;
-    /* margin-right: auto; */
-    height: 100%;
-    width: 50%;
-    margin: auto;
-    
+    width: 30%;
 }
 
-.profilepic{
-    border: 2px solid;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: 0%;
-    /* margin-left:20px; */
-    margin-right: auto;
-    border-color:whitesmoke;
-    text-align: center;
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    transform: translate(-40%, -60%);
+.profiledivison1 h2{
+    color: #fff;
 }
-
-.profilepic img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%; 
-    
-  }
-
-  .guideskillitems{
-    margin-top: 35%;
-    left: 32%;
-    position: absolute;
-    margin-bottom: 20%;
-  }
-
 .profiledivison2{
-
     background-color: #ffffff;
-    box-shadow:0px 1px 1px 1px lightslategray ;
     border-radius: 2px;
-    height:100%;
-    width: 80%;
+    width: 70%;
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     max-height: fit-content;
-    /* margin-top: 90%; */
-    margin-left: 40px;
     padding: 10px;
     gap: 5px;
-    /* grid-column: 1/3;
-    grid-row: 2; */
-    grid-column: 2 / 4;
-    grid-row: 1 / 3;
-
 }
 
 .profileeachdetail{
-    align-items: center;
+    display: flex;
     width: 100%;
     padding: 10px;
-    margin-bottom: 10px;
-    flex-direction: column;
-    box-shadow:0px 0px 1px 0px lightslategray ;
+    box-shadow:2px 2px 2px 2px rgb(101, 101, 101) ;
+    color: black;
 }
 
 .profileeachdetail label {
@@ -165,73 +75,20 @@
     margin-right: 10px;  
     width: 100px;
     font-weight:400;
-    font-family: 'Raleway', sans-serif;
   }
   
-  .profileeachdetail input {
-    display: inline-block;
-    width: 50%; 
-    
-  }
-
 .proin{
-    color: #fff;
     border: none;
-    width: 600px;
+    font-weight: 800;
+    color: rgb(11, 96, 55);
 }
 
 .profbut{
-    /* background: rgb(6, 6, 65); */
-    width: 600px;
+    background: rgb(13, 133, 73);
     border-radius: 2px;
     border: none;
     cursor: pointer;
     color: #fff;
-}
-
-.table {
-    overflow-x: auto;
-    width: 100%;
-  }
-
-.adminprofiletable{
-    table-layout: fixed;
-    height:100% ;
-    width: 80%;
-    text-align: center;
-    /* table-layout: fixed; */
-    box-shadow: 0px 1px 1px 1px lightslategray;
-    margin-left: 40px;
-    border-collapse: collapse;
-    border: none;
-    margin-right: 10px;
-    white-space: nowrap;
-}
-
-.adminprofiletable th {
-    border: none;
-  }
-
-.adminprofiletable th,
-.adminprofiletable td {
-  border: none;
-}
-
-.no-border th,
-.no-border td {
-  border: none;
-}
-    th:nth-child(2),
-    td:nth-child(2) {
-    width: 600px; /* Adjust the width as needed */
-    }
-
-.adminprofiletable tr{
-    tr:hover {background-color: lavenderblush;}
-}
-
-.guidedproject{
-    cursor: pointer;
 }
 
 .guideskill{
@@ -239,32 +96,43 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 5px;
 }
 
-.projectlist{
-    overflow: auto;
-    margin-top: 20%;
-    /* margin-left: 20%; */
-    display:flex;
+.guideaof{
+    color: #fff;
+    background:  rgb(8, 139, 41);
+}
+
+.table{
+    margin-top: 10px;
+    display: flex;
     flex-direction: column;
-    grid-column: 1/4;
-    grid-row: 2;
-    height: 100%; /* Adjust the height as needed */
-    width: 100%; /* Adjust the width as needed */
-    /* margin-right: 50px; */
-
-    background-color: #ffffff;
-    box-shadow:0px 1px 1px 1px lightslategray ;
-    border-radius: 3px;
-
+    padding: 5px;
+    background: #00143d;
 }
 
 .listheading{
-    margin-top: 20px;
-    margin-left: 20px;
-   font-weight: 200;
-   font-family: 'Exo 2';
+    font-weight: 200;
+    color: #fff;
+ }
+
+ .projectsitemguided{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+ }
+
+.projecteachitem{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+    background: rgb(8, 139, 41);
 }
+
+
+
 
 
