--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -37,6 +37,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid white;
     background: #00143d;
 }
 
