--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -36,20 +36,19 @@
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border: 1px solid white;
-    background: #00143d;
+    background: rgb(10, 123, 66);
 }
 
 .profiledivison1{
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 30%;
+    padding-left: 10px;
 }
 
 .profiledivison1 h2{
     color: #fff;
+    margin-top: 20px;
 }
 .profiledivison2{
     background-color: #ffffff;
@@ -82,6 +81,7 @@
     border: none;
     font-weight: 800;
     color: rgb(11, 96, 55);
+    outline: none;
 }
 
 .profbut{
@@ -101,8 +101,8 @@
 }
 
 .guideaof{
-    color: #fff;
-    background:  rgb(8, 139, 41);
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .table{
