--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -47,7 +47,8 @@
 }
 
 .projectsubbut{
-    background:rgb(14, 101, 51);
+    background:#00143d;
+
     border: none;
     color: rgb(255, 255, 255);
     cursor: pointer;
