--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -47,8 +47,7 @@
 }
 
 .projectsubbut{
-    background:#00143d;
-
+    background:#047c6a;
     border: none;
     color: rgb(255, 255, 255);
     cursor: pointer;
